        - Generated Command Set dumps now include owner tags.
        - Fixed a bug where if a Command Set owner was deleted the Command Set was not reassigned (now reassigned to System).
        - Enforced Taint Mode. Several changes made to support this.
        - Added option to Job Receiver to output IDs of queued Jobs.
        - Fixed help output of Job Receiver.
2.1.1   - Fixed formatting on command line help outputs on job receiver and executor.
2.1.0   - Fixed dropdown in Command Sets that didn't adhere to new owner display system.
        - Changed a few icons for clarity.
        - Squashed a race condition that caused Jobs to register as unexpectedly terminated when they had successfully finished.
        - Fixed a bug where the Job receiver would die if a Job was queued but not run.
        - Added ability to inject variables at runtime (triggered by *VAR{VarNameHere}).
----------------
2.0.2   - Two Reboot checks merged into one for quicker response in Job Processor.
        - Added ability to release build/distribution lock in System Status.
        - Changed randomness to be blocking CSPRNG based for generated passwords and salts.
        - Fixed fault in RNG display for salts.
        - Fixed an issue where the first host type was selected when editing a host instead of the actual type.
        - Performance improvements in both the DB and a handful of pages.
        - Fixed an issue with highlighting being the same colour as the text for matching server aliases in ReverseProxy.
        - Deleted configs are now correctly purged from Git.
        - Configs are now handled individually when committing to Git to stop processes committing each others files.
        - Fixed Command Set owner filter and improved user control of private Command Sets.
        - Remembered to include checksums :).
2.0.1   - Clarified RMin/RMax in IP Sweep.
        - Fixed an issue with Redirects overruling each other.