@@ -9,6 +9,7 @@
         - Enforced Taint Mode. Several changes made to support this.
         - Added option to Job Receiver to output IDs of queued Jobs.
         - Fixed help output of Job Receiver.
+        - Fixed a fault with Jobs triggering as public key auth if the decoder tried to decode an unencoded password.
 2.1.1   - Fixed formatting on command line help outputs on job receiver and executor.
 2.1.0   - Fixed dropdown in Command Sets that didn't adhere to new owner display system.
         - Changed a few icons for clarity.
